--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   },
   "main": "background.js",
   "dependencies": {
+    "compression-webpack-plugin": "^3.0.0",
     "core-js": "^2.6.5",
     "dayjs": "^1.8.16",
     "iview": "^3.5.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "vue": "^2.6.10",
     "vue-i18n": "^8.14.1",
     "vue-router": "^3.1.3",
